--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 		<link type="text/css" rel="stylesheet" href="/resources/css/app.css" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/grid.css" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/jquery-ui-1.10.1.custom.min.css" />
+		<link rel="stylesheet" href="/resources/css/vallenato.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/resources/css/liteaccordion.css" type="text/css" media="screen" />
+		
 		<script src="/resources/js/jquery.min.js"></script>
 		<script src="/resources/js/jquery-ui-1.10.1.custom.min.js"></script>
+		<script src="/resources/js/vallenato.js"></script>
+		<script src="/resources/js/jquery.easing.1.3.js"></script>
+		<script src="/resources/js/liteaccordion.jquery.min.js"></script>
+		<script src="/resources/js/app.js"></script>
+		
 		<script>
 			$(document).ready(function(){				
 				$(".mainMenuHref").click(function() {
@@ -19,84 +27,27 @@
 						}						
 					}
 				});
-			});
-			
-			function loadTumblrIframe(){
-				$("#newsThoughtsDiv iframe").get(0).contentWindow.location.href = "http://shreyaspurohit.tumblr.com";
-			}
-			
-			function unloadTumblrIframe(){
-				$("#newsThoughtsDiv iframe").get(0).contentWindow.location.href = "about:blank";
-			}
-			
-			function showDialog(type, widthValPerc, heightValPerc, hideTitle){
-				var w = widthValPerc ? widthValPerc : 0.5;
-				var h = heightValPerc ? heightValPerc : 0.75;
-				var wWidth = $(window).width();
-				var dWidth = wWidth * w;
-				var wHeight = $(window).height();
-				var dHeight = wHeight * h;
-				
-				$(type).dialog({
-				  dialogClass: "no-close" + (hideTitle === true ? " noTitle" : " withTitle"),
-				  modal: true,
-				  buttons: {
-					Close: function() {
-					  $( this ).dialog( "close" );
-					}
-				  },
-				  draggable: false,
-				  width:dWidth
-				});				
-				if(heightValPerc){
-					$(type).dialog("option", "height", dHeight);
-				}
-			}
+				 $('#projectAccordWeb').liteAccordion({
+					 theme : 'light',
+					 easing: 'easeOutBounce',
+					 rounded : true,
+					 containerWidth: $(window).width() * 0.75 > 350 ? $(window).width() * 0.75 : 350,
+					 containerHeight: $(window).height() * 0.4 > 250 ? $(window).height() * 0.4 : 250
+				 });
+				 $('#projectAccordLib').liteAccordion({
+					 theme : 'light',
+					 easing: 'easeOutBounce',
+					 rounded : true,
+					 containerWidth: $(window).width() * 0.75 > 350 ? $(window).width() * 0.75 : 350,
+					 containerHeight: $(window).height() * 0.4 > 250 ? $(window).height() * 0.4 : 250
+				 });
+				 $('.accordion-content').css('width','auto');						 
+			});						
 		</script>
 		<style>
 			body{
 				width: 100%;
-			}
-			.mainContainer{
-				width: 100%;				
-			}
-			.mainMenuHref, .mainMenuDialog{
-				cursor : pointer;
-			}
-			.hidden{
-				display: none;
-			}
-			.ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-buttonpane { 
-				font-size: 0.8em; 
-			}
-			#socialDiv .ui-dialog{
-				min-width: 500px;
-				min-height: 400px;
-			}
-			#newsThoughtsDiv .ui-dialog{
-				min-width: 500px;
-				min-height: 400px;
-			}
-			.no-close .ui-dialog-titlebar-close {
-				display: none;
-			}
-			.ui-dialog .ui-dialog-content{
-				font-size: 0.8em;
-			}
-			#socialDiv div{
-				padding-bottom: 5px;
-				height: 20%;
-			}
-			.noTitle .ui-dialog-titlebar {
-				display:none
-			}
-			#titleDiv{
-				position: absolute;
-				top: 1%;
-				left: 1%;
-				font-family: 'Freckle Face', cursive;
-				font-size: 4em;
-			}
+			}						
 		</style>
 	</head>
 	<body class="container_16">
@@ -109,10 +60,10 @@
 			</div>			
 		</div>	
 		<div class="mainContainer prefix_5 grid_11">
-			<div class="drop-shadow curled mainMenuDialog" onclick="showDialog('#socialDiv')">
+			<div class="drop-shadow curled mainMenuDialog" onclick="showDialog('#socialDiv', undefined, undefined, undefined, onDialogSetMinWidth)">
 				<p>Social </p>
 			</div>			
-			<div class="drop-shadow curled mainMenuDialog" onclick="showDialog('about')">
+			<div class="drop-shadow curled mainMenuDialog" onclick="showDialog('#projectsDiv', 0.85, 0.95, false, onDialogSetMinWidth);">
 				<p>Projects </p>
 			</div>
 		</div>
@@ -120,7 +71,7 @@
 			<div class="drop-shadow curled mainMenuHref">
 				<p>Blog <a href="http://techdiary.bitourea.com" target="_blank"></a></p>
 			</div>
-			<div class="drop-shadow curled mainMenuDialog" onclick="showDialog('#newsThoughtsDiv', 0.85, 0.9, true);loadTumblrIframe();">
+			<div class="drop-shadow curled mainMenuDialog" onclick="showDialog('#newsThoughtsDiv', 0.85, 0.9, true, onDialogSetMinWidth);loadTumblrIframe();">
 				<p>News & Thoughts </p>
 			</div>
 		</div>
@@ -136,6 +87,135 @@
 		</div>
 		<div id="newsThoughtsDiv" class="divDialog hidden" title="News & Thoughts">
 			<iframe style="border: none;  position: relative;  top: 0;  left: 0;  right: 0;  bottom: 0;  float: none;  width: 100%;  height: 100%;"></iframe>
+		</div>
+		<div id="projectsDiv" class="divDialog hidden" title="Projects">
+			<div id="accordion-container"> 
+				 <h2 class="accordion-header">Libraries</h2> 
+				 <div class="accordion-content"> 
+					  <div id="projectAccordLib">
+						<ol>
+							<li>
+								<h2><span>AS3 Generator</span></h2>
+								<div>
+									<div>
+									A XDoclet2 plugin to generate AS3 from Java classes. It is required to to generate the flex 
+								side model classes in sync with the java side value objects. I Googled but was not able to find 
+								one that is as simple as the one written by Joe Berkovitz of Allurent. It was pretty old code and 
+								lacked configuration options for generating AS classes. I decided to write my own plugin for xdoclet2 
+								that can be used to generate the flex code.
+									</div>
+									<div>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/AS3Generator'>AS3Generator</a></b>
+									</div>								
+								</div>
+							</li>
+							<li>
+								<h2><span>SRP Scala</span></h2>
+								<div>
+									<div>
+										This library provides an implementation of secure remote protocol in scala. 
+										The SRP version implemented is 6.a as provided at <a href='http://srp.stanford.edu'>http://srp.stanford.edu</a>. The design details 
+										are provided at <a href='http://srp.stanford.edu/design.html'>http://srp.stanford.edu/design.html</a>.
+									</div>
+									<div>
+										<b>Live in Action: <a href='http://srp.bitourea.com/'>Live</a></b>
+									</div>
+									<div>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/SRPScala'>SRP Scala</a></b>
+									</div>
+								</div>
+							</li>
+							<li>
+								<h2><span>Tagcloud Generator</span></h2>
+								<div>
+									<div>
+										This jquery plugin generates a very simple tag cloud based on the weight/strength of the each element.
+									</div>
+									<div>
+										<b>Live in Action: <a href='http://sl.bitourea.com/'>Semantic Link</a></b>
+									</div>
+									<div>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/jquery.plugin.tagCloudGenerator'>Tag Cloud Generator</a></b>
+									</div>
+								</div>
+							</li>
+							<li>
+								<h2><span>Text Font Adjust</span></h2>
+								<div>
+									<div>
+										This jquery plugin adjusts the font of the element so that it fits with in the container.
+									</div>
+									<div>
+										<b>Live in Action: <a href='http://sl.bitourea.com/'>Semantic Link</a></b>
+									</div>
+									<div>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/jquery.plugin.textFontAdjust'>Tag Cloud Generator</a></b>
+									</div>
+								</div>
+							</li>
+						</ol>
+						<noscript>
+							<p>Please enable JavaScript to get the full experience.</p>
+						</noscript>
+					  </div> 
+				 </div> 
+				 <h2 class="accordion-header">Web Apps</h2> 
+				 <div class="accordion-content"> 
+					 <div id="projectAccordWeb">
+						<ol>
+							<li>
+								<h2><span>Semantic Link</span></h2>
+								<div>
+									<div>
+										The project 'Semantic Links' started as a sample application I started to develop to present node.js and 
+										its capabilities to my team. After some amount of development I realized that the idea and the application 
+										is good to be put for real production usage. The source code is open source and provided under MIT license. 
+										The application was built with idea of generating more interesting analytics of web page usages. 
+									</div>
+									<div>
+										<b>Beta version: <a href='http://sl.bitourea.com/'>Semantic Link</a></b>
+									</div>
+									<div>
+										<b>Github URL: <a href='#'>Not yet released</a></b>
+									</div>
+								</div>
+							</li>
+							<li>
+								<h2><span>VWedding</span></h2>
+								<div>
+									<div>
+										One of my friends wedding was around the corner, and this was the gift for her! A online wedding invitation.
+									</div>
+									<div>
+										<b>Live: <a href='http://vwedding.bitourea.com/'>VWedding</a></b>
+									</div>
+									<div>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/VWedding'>Wedding Invitation</a></b>
+									</div>
+								</div>
+							</li>
+							<li>
+								<h2><span>Bitourea</span></h2>
+								<div>
+									<div>
+										With my personal projects count increasing I needed a home page built for myself that indexes and 
+										showcase them. Interested in contacting my for job opportunities, connect to me on <a href='https://www.linkedin.com/in/shreyaspurohit'>Linked In</a>.
+									</div>
+									<div>
+										<b>Live: <a href='http://www.bitourea.com/'>You are on it!</a></b>
+									</div>
+									<div>
+										<b>Github URL: <a href='#'>Not yet released</a></b>
+									</div>
+								</div>
+							</li>							
+						</ol>
+						<noscript>
+							<p>Please enable JavaScript to get the full experience.</p>
+						</noscript>
+					</div>
+				 </div> 
+			</div>
 		</div>
 		<div id="socialDiv" class="divDialog hidden" title="Social">			
 			<div class="container_16">
