Added bitourea and SL github URLs

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 										<b>Beta version: <a href='http://sl.bitourea.com/'>Semantic Link</a></b>
 									</div>
 									<div>
-										<b>Github URL: <a href='#'>Not yet released</a></b>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/SemanticLink'>Semantic Link</a></b>
 									</div>
 								</div>
 							</li>
@@ -205,7 +205,7 @@
 										<b>Live: <a href='http://www.bitourea.com/'>You are on it!</a></b>
 									</div>
 									<div>
-										<b>Github URL: <a href='#'>Not yet released</a></b>
+										<b>Github URL: <a href='https://github.com/shreyaspurohit/bitourea.com'>Source</a></b>
 									</div>
 								</div>
 							</li>							
