--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>Bitourea</title>
+		<meta name="description" content="Shreyas Purohit homepage website" />
+		<meta name="keywords" content="Shreyas Purohit, homepage, resume, blog, social, news, projects" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/app.css" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/grid.css" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/jquery-ui-1.10.1.custom.min.css" />
