--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								<h2><span>Browser Select Dialog</span></h2>
 								<div>
 									<div>
-										This plugin allows you to show a dialog to upgrade user browser when it is not upto the required specification. This is mainly used to redire older version of IE users to upgrade to later new versions or prompt them to use different and better browser.
+										This jquery plugin allows you to show a dialog to upgrade user browser when it is not upto the required specification. This is mainly used to redire older version of IE users to upgrade to later new versions or prompt them to use different and better browser.
 									</div>
 									<div>
 										<b>Live in Action: <a href='http://browserselect.bitourea.com/'>Browser Select Dialog</a></b>
