--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link type="text/css" rel="stylesheet" href="/resources/css/app.css" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/grid.css" />
 		<link type="text/css" rel="stylesheet" href="/resources/css/jquery-ui-1.10.1.custom.min.css" />
+		<link type="text/css" rel="stylesheet" href="/resources/css/browserSelect.css" />
 		<link rel="stylesheet" href="/resources/css/vallenato.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="/resources/css/liteaccordion.css" type="text/css" media="screen" />
 		
@@ -14,10 +15,12 @@
 		<script src="/resources/js/vallenato.js"></script>
 		<script src="/resources/js/jquery.easing.1.3.js"></script>
 		<script src="/resources/js/liteaccordion.jquery.min.js"></script>
+		<script src="/resources/js/jquery.browserSelect.js"></script>
 		<script src="/resources/js/app.js"></script>
 		
 		<script>
-			$(document).ready(function(){				
+			$(document).ready(function(){
+				$('body').browserSelect();				
 				$(".mainMenuHref").click(function() {
 					var anchorTag = $(this).find("a");
 					if(anchorTag && anchorTag.length > 0){
